Fix header height inaligned to Github header

--- a/src/styles/vars.less
+++ b/src/styles/vars.less
@@ -13,7 +13,7 @@
 @index-popup: 1000000002;
 
 // ====== Sizing ======
-@header-height: 60px;
+@header-height: 56px;
 @footer-height: 30px;
 
 // ====== Icon names ======
